docs/am/4.11/reference/am-api-reference.md
# API Reference

## Overview

{% hint style="info" %}
The OpenAPI specs for other versions of AM are available in the documentation for that version.
{% endhint %}

The AM API exposes a complete Restful API accessible to anyone wanting to script some part of the administration.

* To access the OpenAPI spec for AM 4.10, go to [OpenAPI spec](https://raw.githubusercontent.com/gravitee-io/gravitee-access-management/4.10.x/docs/mapi/openapi.yaml).

## Authorization

AM API is secured using token-based authorization.

{% hint style="info" %}
Use the following HTTP Authorization request header to call the API: `Authorization Bearer token`. Also, you can use an `Authorization="Bearer token"` cookie to access the API resources.
{% endhint %}

### Token endpoint

You can use the `token` endpoint to retrieve the `AM Management API token` . To retrieve the token, present the user credentials in the `Basic authentication scheme`.

The following example exchanges default admin account credentials (`admin/adminadmin`) for a token:

{% code overflow="wrap" %}
```sh
POST http(s)://AM_MANAGEMENT_API/management/auth/token HTTP/1.1

curl -X POST \
  http(s)://AM_MANAGEMENT_API/management/auth/token \
  -H 'authorization: Basic base64(admin:adminadmin)' \


  HTTP/1.1 200 OK
  Cache-Control: no-cache, no-store, max-age=0, must-revalidate
  Pragma: no-cache
  Expires: 0
  Content-Type: application/json
  {
      "access_token": "eyJhbGciOiJIUzUxMiJ9.eyJzdWIiOiJhZ....m4g9SK1fPtcPTLmbxWZDyP1hV9vjdsLdA",
      "expires_at": "Thu Jun 28 10:35:31 CEST 2018",
      "token_type": "bearer"
  }
```
{% endcode %}

### Authorization endpoint

The `authorization` endpoint is used to interact with the end user to obtain the `AM Management API token`. The user is redirected to the AM login page, and the authentication is processed to obtain the token using an HTTP cookie.

Here is an example of how to retrieve and use the accessToken on the Management API:

{% code overflow="wrap" %}
```sh
GET http(s)://AM_MANAGEMENT_API/management/auth/authorize?redirect_uri=http://callback-app HTTP/1.1

curl http(s)://AM_MANAGEMENT_API/management/auth/authorize?redirect_uri=http://callback-app

  HTTP/1.1 302 Found
  Location: http(s)://AM_MANAGEMENT_API/management/auth/login


POST http(s)://AM_MANAGEMENT_API/management/auth/login

  Set-Cookie: Authorization="Bearer token"
  HTTP/1.1 302 Found
  Location: http://callback-app
```
{% endcode %}

* `redirect_uri`: redirection endpoint after authentication success

### User Migration

For user migrations from an alternative OIDC provider to Access Management, you can define the `lastPasswordReset` attribute. This attribute ensures that a password policy with password expiry requests a password reset according to the value provided during the migration.

In Management REST API, `lastPasswordReset` attribute in the User definition is a long value representing the number of milliseconds since the standard base time known as "the epoch".

## Protected Resource Endpoints

### Create Secret

**POST** `/protected-resources/{id}/secrets`

Creates a new secret for the specified Protected Resource.

**Authentication**: Bearer token required

**Request Body**:
```json
{
  "name": "string"
}
```

**Response** (200 OK):
```json
{
  "id": "string",
  "name": "string",
  "secret": "string",
  "settingsId": "string",
  "createdAt": "timestamp"
}
```

**Error Codes**:
- `401 Unauthorized`: Missing or invalid authentication token
- `404 Not Found`: Protected Resource not found

### Renew Secret

**POST** `/secrets/{secretId}/_renew`

Renews an existing secret by deleting the old value and generating a new one with the same settings.

**Authentication**: Bearer token required

**Response** (200 OK):
```json
{
  "id": "string",
  "name": "string",
  "secret": "string",
  "settingsId": "string",
  "createdAt": "timestamp"
}
```

**Error Codes**:
- `401 Unauthorized`: Missing or invalid authentication token
- `404 Not Found`: Secret not found

### Delete Secret

**DELETE** `/secrets/{secretId}`

Deletes the specified secret. Associated settings are removed only if no other secrets reference them.

**Authentication**: Bearer token required

**Response** (204 No Content)

**Error Codes**:
- `401 Unauthorized`: Missing or invalid authentication token
- `404 Not Found`: Secret not found

### Add Member

**POST** `/protected-resources/{id}/members`

Adds a member to the Protected Resource with specified permissions.

**Authentication**: Bearer token required

**Request Body**:
```json
{
  "memberId": "string",
  "memberType": "string",
  "role": "string"
}
```

**Response** (201 Created):
```json
{
  "memberId": "string",
  "memberType": "string",
  "referenceId": "string",
  "referenceType": "string",
  "role": "string"
}
```

**Error Codes**:
- `401 Unauthorized`: Missing or invalid authentication token
- `404 Not Found`: Protected Resource not found

### List Members

**GET** `/protected-resources/{id}/members`

Retrieves all members of the specified Protected Resource.

**Authentication**: Bearer token required

**Response** (200 OK):
```json
[
  {
    "memberId": "string",
    "memberType": "string",
    "referenceId": "string",
    "referenceType": "string",
    "role": "string"
  }
]
```

**Error Codes**:
- `401 Unauthorized`: Missing or invalid authentication token
- `404 Not Found`: Protected Resource not found

### Check Permissions

**GET** `/protected-resources/{id}/permissions`

Returns the authenticated user's permissions for the specified Protected Resource.

**Authentication**: Bearer token required

**Response** (200 OK):
```json
[
  "string"
]
```

**Error Codes**:
- `401 Unauthorized`: Missing or invalid authentication token
- `404 Not Found`: Protected Resource not found

### Remove Member

**DELETE** `/protected-resources/{id}/members/{member}`

Removes the specified member from the Protected Resource.

**Authentication**: Bearer token required

**Response** (204 No Content)

**Error Codes**:
- `401 Unauthorized`: Missing or invalid authentication token
- `404 Not Found`: Protected Resource or member not found

### Search Protected Resources

**GET** `/protected-resources?q=<query>`

Searches for Protected Resources by name or client ID using wildcard patterns. Use `*` to match zero or more characters (e.g., `client*` matches `clientId123` and `client-test`). Searches are case-insensitive and return paginated results.

**Authentication**: Bearer token required

**Query Parameters**:
- `q`: Search query with wildcard support (optional)

**Response** (200 OK):
```json
{
  "data": [
    {
      "id": "string",
      "name": "string",
      "clientId": "string"
    }
  ],
  "totalCount": "number"
}
```

**Error Codes**:
- `401 Unauthorized`: Missing or invalid authentication token
